--- a/config.toml
+++ b/config.toml
@@ -29,9 +29,9 @@ paginate = 10
     weight = 2
 
 [[menu.main]]
-    name = "FAQ"
-    identifier = "faq"
-    url  = "/faq/"
+    name = "About"
+    identifier = "about"
+    url  = "/about/"
     weight = 3
 
 [[menu.main]]
