--- a/config.toml
+++ b/config.toml
@@ -44,23 +44,17 @@ paginate = 10
 [[menu.topbar]]
     weight = 1
     name = "GitHub"
-    url = "https://github.com/devcows/hugo-universal-theme"
+    url = "https://github.com/rOpenGov"
     pre = "<i class='fa fa-2x fa-github'></i>"
 
 [[menu.topbar]]
     weight = 2
-    name = "Facebook"
-    url = "http://facebook.com"
-    pre = "<i class='fa fa-2x fa-facebook'></i>"
-
-[[menu.topbar]]
-    weight = 3
     name = "Twitter"
-    url = "http://twitter.com"
+    url = "http://twitter.com/ropengov"
     pre = "<i class='fa fa-2x fa-twitter'></i>"
 
 [[menu.topbar]]
-    weight = 4
+    weight = 3
     name = "Email"
     url = "mailto:your@email.com"
     pre = "<i class='fa fa-2x fa-envelope'></i>"
